chore: verify Swagger UI and endpoints working for Orders, Payments, Customers